# chroma

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
crates/chroma-base/: Cargo.toml
crates/chroma-base/src/: path.rs
crates/chroma-render/: Cargo.toml  README.md  build.rs
crates/chroma-render/configs/: render.json
crates/chroma-render/examples/: render.rs
crates/chroma-render/src/: app.rs  common.rs  control.rs  draw.rs  lib.rs  raytracing.rs  texture.rs  utils.rs
crates/chroma-render/src/app/: app.rs  renderer.rs  window.rs
crates/chroma-render/src/common/: buffer.rs  camera.rs  command_buffer.rs  command_pool.rs  compute_pipeline.rs  consts.rs  debug.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  extension.rs  extra_functions.rs  framebuffer.rs  graphics_pipeline.rs  image_buffer.rs  image_view.rs  index.rs  instance.rs  layer.rs  material.rs  memory.rs  pipeline_layout.rs  raytracing_pipeline.rs  render_pass.rs  surface.rs  swapchain.rs  sync.rs  uniform_buffer.rs  vertex.rs
crates/chroma-render/src/control/: control.rs  keyboard.rs  mouse.rs
crates/chroma-render/src/draw/: deferred.rs  pathtracing.rs  strategy.rs
crates/chroma-render/src/draw/deferred/: deferred.rs  raytracing.rs  shadow.rs  skybox.rs
crates/chroma-render/src/raytracing/: properties.rs  raytracing.rs  scratch_buffer.rs
crates/chroma-render/src/shader/: shader.rs
crates/chroma-render/src/texture/: mipmap.rs  texture.rs  texture_sampler.rs
crates/chroma-render/src/utils/: math.rs  tangent.rs  time.rs  tool.rs
crates/chroma-scene/: Cargo.toml
crates/chroma-scene/config/: all.json  boombox.json  sponza.json
crates/chroma-scene/examples/: config.rs  download.rs  inspect.rs
crates/chroma-scene/src/: asset.rs  cubemap.rs  gltf.rs  image.rs  lib.rs  light.rs  material.rs  meshlet.rs  model.rs  scene.rs  transform.rs
crates/chroma-scene/src/gltf/: gltf.rs
crates/chroma-shader/: .env  Cargo.toml
crates/chroma-shader/src/: command.rs  main.rs  utils.rs
scripts/: render.sh
shader/src/deferred/: brdf.glsl  common.glsl  frag_input.glsl  hammersley.glsl  ibl.glsl  random.glsl  raytracing_common.glsl  shader.comp  shader.frag  shader.mesh  shader.task  shader.vert  shadow.rchit  shadow.rgen  shadow.rmiss
