[workspace]
resolver = "2"
members = [
    "crates/chroma-base",
    "crates/chroma-render",
    "crates/chroma-scene",
    "crates/chroma-shader",
]

[workspace.dependencies]
anyhow = "1.0.93"
git2 = "0.19.0"
ash = "0.38.0"
env_logger = "0.11.5"
log = "0.4.22"
nalgebra-glm = "0.19.0"
vk-mem = "0.4.0"
winit = "0.30.5"
gltf = { version = "1.4.1", features = [
    "KHR_materials_transmission",
    "KHR_materials_volume",
    "KHR_materials_emissive_strength",
    "KHR_materials_specular",
    "KHR_materials_variants",
    "extensions",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
glob = "0.3.1"
imgui = "0.12.0"
imgui-rs-vulkan-renderer = "1.16.0"
gpu-allocator = "0.27"
imgui-winit-support = "0.13.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
exr = "1.73.0"
image = "0.25.5"
