[package]
name = "chroma-scene"
version = "0.1.0"
edition = "2021"

[dependencies]
gltf = { workspace = true, features = [
    "KHR_materials_transmission",
    "KHR_materials_volume",
    "KHR_materials_emissive_strength",
    "KHR_materials_specular",
    "KHR_materials_variants",
    "KHR_lights_punctual",
    "extensions",
] }
anyhow.workspace = true
chroma-base = { version = "0.1.0", path = "../chroma-base" }
log.workspace = true
git2.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
env_logger.workspace = true
nalgebra-glm.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
exr.workspace = true
image.workspace = true
meshopt.workspace = true
